fix login/register page widths, tweak sidebar spacing

--- a/trinium/_login_register_page.scss
+++ b/trinium/_login_register_page.scss
@@ -11,15 +11,10 @@ body.login {
         padding: 0 5em;
 
         .register,
-        .login {
-            min-width: 400px;
-            max-width: 900px;
-
-        }
-
+        .login,
         .dashboard-login {
-            min-width: 400px;
-            max-width: 500px;
+            width: 400px;
+
         }
     }
 
